...
            space = Spacing.medium,
            alignment = Alignment.CenterVertically,
        ),
    ) {
        Text("You have not any projects yet")
        Button(onClick = onAddProject) {
            Text("Add Project")
        }
    }
}

